# aptabase-cpp

./: CMakeLists.txt  README.md
include/aptabase/: analytics.hpp  legacy_analytics.hpp  model.hpp  provider.hpp
include/aptabase/net/: boost.hpp  client.hpp  httplib.hpp
include/aptabase/provider/: auto_provider.hpp  manual_provider.hpp  provider.hpp  tick_provider.hpp  worker_provider.hpp
sources/: analytics.cpp  legacy_analytics.cpp  model.cpp  provider.cpp
sources/net/: boost.cpp  client.cpp  httplib.cpp
sources/provider/: auto_provider.cpp  manual_provider.cpp  provider.cpp  tick_provider.cpp  worker_provider.cpp
